Bugfix: under menu button elements were covered from click event.

--- a/style.css
+++ b/style.css
@@ -109,7 +109,7 @@ body {
 
 .intro-text {
     font-family: 'Cinzel', serif;
-    flex: 1 1 400px;
+    flex: 1 5 50%;
     color: rgba(0, 0, 0, .6);
     padding: 50px 72px 50px 50px;
 }
@@ -123,12 +123,15 @@ body {
 }
 
 .intro-image {
-    flex: 1 3 400px;
-    min-height: 400px;
+    flex: 25 1 450px;
     background-image: url(resources/image/cover8.jpg);
     background-size: cover;
     background-position: center top;
     position: relative;
+}
+
+.intro-image-wrap {
+    min-height: 400px;
 }
 
 .intro-text h1 {
@@ -513,7 +516,7 @@ body {
 }
 
 .navbar {
-    visibility: visible;
+    
     position: absolute;
     z-index: 50;
     transition: all .5s;
@@ -527,6 +530,7 @@ body {
 }
 
 .navbar-menu {
+    visibility: visible;
     box-shadow: 0 0 20px black;
     width: 380px;
     background-color: #b8916d;
@@ -548,6 +552,7 @@ body {
 }
 
 .nav-icon-wrapper {
+    visibility: visible;
     padding: 20px;
     width: fit-content;
     height: fit-content;
